apps/base/boinc/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: boinc
  labels:
    app: boinc
    istio-injection: disabled
    toolkit.fluxcd.io/tenant: homelab-team
