apps/base/boinc/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: boinc
  namespace: boinc
  labels:
    app: boinc
spec:
  selector:
    matchLabels:
      app: boinc
  template:
    metadata:
      labels:
        app: boinc
    spec:
      containers:
        - name: boinc
          image: boinc/client:arm64v8
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: rpc
              containerPort: 31416
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 4Gi
          volumeMounts:
            - name: boinc-data
              mountPath: /var/lib/boinc
      volumes:
        - name: boinc-data
          hostPath:
            path: /var/lib/boinc
            type: DirectoryOrCreate
